# PCA

./: CMakeLists.txt  pyproject.toml  readme.md
src/: Mtx.h  Vec.h  pca.cpp
test/: simple.py
